# auto-builder-register

./: .gitignore  README.md  demo_auto_verification.py  mail.md  pyproject.toml
src/auto_update_q/: __init__.py  auto_register.py
src/auto_update_q/aws_builder/: README.md  __init__.py  aws_builder.py  browser_manager.py  captcha_handler.py  config.py  demo.py  element_waiter.py  form_handler.py  optimized_selectors.py  prompt.md  registration_checker.py  verification_handler.py
src/auto_update_q/temp_mail/: README.md  USAGE.md  __init__.py  dropmail.py  example.py  prompt.md  quick_demo.py  test_dropmail.py
test/: test_auto_register.py  test_aws_builder_refactored.py  test_cli.py  test_mail_requirements.py
