[project]
name = "auto-update-q"
version = "0.1.0"
description = "Auto Update Q - AWS Builder ID 自动注册工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "requests>=2.31.0",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
    "typer>=0.12.0",
]

[project.scripts]
auto-register-aws-builder = "auto_update_q.auto_register:app"

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
